# surface_potential_analysis

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  requirements.txt  task.bash
lib/hamiltonian_generator/: Cargo.toml  hamiltonian_generator.pyi  pyproject.toml
lib/hamiltonian_generator/src/: basis.rs  lib.rs
src/hydrogen_copper_111/: pyproject.toml
src/hydrogen_copper_111/hydrogen_copper_111/: __init__.py  s1_potential.py  s1_potential_plot.py  s2_hamiltonian.py  s3_eigenstates.py  s3_eigenstates_plot.py  s4_wavepacket.py  s4_wavepacket_analysis.py  s4_wavepacket_plot.py  s5_overlap.py  s5_overlap_analysis.py  surface_data.py
src/main/: pyproject.toml
src/main/_main/: main.py
src/main/main/: main.py
src/nickel_111/: README.md  pyproject.toml
src/nickel_111/nickel_111/: __init__.py  basis_plot.py  eigenstates.py  eigenstates_plot.py  experiment_comparison.py  hamiltonian.py  hamiltonian_plot.py  overlap.py  poster_images.py  potential.py  potential_plot.py  s1_potential.py  s1_potential_plot.py  s2_hamiltonian.py  s2_hamiltonian_analysis.py  s2_hamiltonian_plot.py  s3_eigenstates.py  s3_eigenstates_plot.py  s4_wavepacket.py  s4_wavepacket_analysis.py  s4_wavepacket_plot.py  s5_electron_integral.py  s5_overlap.py  s5_overlap_analysis.py  s5_overlap_basic.py  s5_overlap_full.py  surface_data.py  wavepacket.py  wavepacket_plot.py
src/surface_dynamics_simulation/: README.md  pyproject.toml
src/surface_dynamics_simulation/_test_surface_dynamics_simulation/: test_calculate_isf.py
src/surface_dynamics_simulation/_tests/: test_build_tunnelling_matrix.py
src/surface_dynamics_simulation/surface_dynamics_simulation/: __init__.py  simulation_config.py
src/surface_dynamics_simulation/surface_dynamics_simulation/hopping_matrix/: hopping_matrix.py  new_electron_integral.py  old_electron_integral.py  plot.py
src/surface_dynamics_simulation/surface_dynamics_simulation/tunnelling_matrix/: build.py  tunnelling_matrix.py  util.py
src/surface_dynamics_simulation/surface_dynamics_simulation/tunnelling_simulation/: isf.py  isf2.py  isf_calculation.py  plot.py  simulation.py  simulation2.py  tunnelling_simulation_basis.py  tunnelling_simulation_state.py
src/surface_potential_analysis/: README.md  pyproject.toml
src/surface_potential_analysis/_test_surface_potential_analysis/: basis_config_conversion_test.py  basis_config_test.py  basis_conversion_test.py  eigenstate_conversion_test.py  eigenstate_test.py  hamiltonian_builder_test.py  hamiltonian_eigenstates_test.py  hamiltonian_test.py  interpolation_test.py  overlap_test.py  sho_basis_test.py  utils.py  wavepacket_test.py
src/surface_potential_analysis/_tests/: basis_config_conversion_test.py  basis_config_test.py  basis_conversion_test.py  basis_test.py  eigenstate_conversion_test.py  eigenstate_test.py  hamiltonian_builder_test.py  hamiltonian_eigenstates_test.py  hamiltonian_test.py  interpolation_test.py  sho_basis_test.py  utils.py  wavepacket_test.py
src/surface_potential_analysis/surface_potential_analysis/: _types.py  _variance_test.py  basis.py  basis_config.py  basis_config_plot.py  brillouin_zone.py  copper_surface_analysis.py  eigenstate.py  eigenstate_plot.py  energy_data.py  energy_data_plot.py  energy_eigenstate.py  energy_eigenstates_plot.py  hamiltonian.py  hamiltonian_builder.py  hamiltonian_eigenstates.py  hermite.py  interpolation.py  overlap_transform_plot.py  plot_eigenstate.py  plot_energy_eigenstates.py  plot_sho_wavefunction.py  plot_surface_hamiltonian.py  potential_basis.py  sho_basis.py  sho_wavefunction_plot.py  surface_config.py  surface_config_plot.py  surface_hamiltonian_plot.py  util.py  wavepacket.py  wavepacket_grid.py  wavepacket_grid_plot.py  wavepacket_plot.py
src/surface_potential_analysis/surface_potential_analysis/_legacy/: brillouin_zone.py  eigenstate.py  eigenstate_plot.py  energy_data.py  energy_data_plot.py  energy_eigenstate.py  energy_eigenstates_plot.py  hamiltonian.py  overlap_transform.py  overlap_transform_plot.py  sho_wavefunction.py  sho_wavefunction_plot.py  surface_config.py  surface_hamiltonian_plot.py  wavepacket_grid.py  wavepacket_grid_plot.py
src/surface_potential_analysis/surface_potential_analysis/axis/: __init__.py  _legacy_adapter.py  axis.py  axis_like.py  block_fraction_axis.py  conversion.py  evenly_spaced_basis.py  plot.py  stacked_axis.py  time_axis_like.py  util.py
src/surface_potential_analysis/surface_potential_analysis/basis/: __init__.py  basis.py  basis_like.py  block_fraction_basis.py  brillouin_zone.py  build.py  conversion.py  evenly_spaced_basis.py  plot.py  potential_basis.py  sho_basis.py  stacked_basis.py  time_basis_like.py  util.py
src/surface_potential_analysis/surface_potential_analysis/basis_config/: __init__.py  basis_config.py  build.py  conversion.py  plot.py  potential_basis.py  sho_basis.py  util.py
src/surface_potential_analysis/surface_potential_analysis/copper_100/: __init__.py  copper_surface_bands_plot.py  copper_surface_data.py  copper_surface_hamiltonian.py  copper_surface_hamiltonian_plot.py  copper_surface_overlap.py  copper_surface_potential.py  copper_surface_potential_plot.py  copper_surface_wavepacket.py  copper_surface_wavepacket_plot.py  surface_bands_plot.py  surface_eigenstates.py  surface_eigenstates_plot.py  surface_hamiltonian.py  surface_hamiltonian_plot.py  surface_overlap.py  surface_overlap_plot.py  surface_potential.py  surface_potential_plot.py  surface_wavepacket.py  surface_wavepacket_plot.py
src/surface_potential_analysis/surface_potential_analysis/copper_111/: __init__.py  surface_data.py  surface_potential.py  surface_potential_plot.py
src/surface_potential_analysis/surface_potential_analysis/util/: plot.py  (+4 more)
src/surface_potential_analysis/tests/: basis_config_test.py  brillouin_zone_test.py  eigenstate_config_test.py  eigenstate_test.py  energy_data_test.py  hamiltonian_builder_test.py  hamiltonian_eigenstates_test.py  hamiltonian_test.py  hermite_test.py  interpolation_test.py  sho_basis_test.py  sho_config_test.py  sho_hamiltonian_builder_test.py  wavepacket_test.py
(+790 files in other folders)
