[tool.poetry]
name = "surface_analysis_monorepo"
version = "0.0.1"
description = ""
authors = ["Matthew Ord <mo433@cam.ac.uk>"]
readme = "README.md"
packages = [
    { include = "_main", from = "src/main" },
    { include = "hydrogen_copper_100", from = "src/hydrogen_copper_100" },
    { include = "hydrogen_copper_111", from = "src/hydrogen_copper_111" },
    { include = "hydrogen_nickel_111", from = "src/hydrogen_nickel_111" },
    { include = "hydrogen_platinum_111", from = "src/hydrogen_platinum_111" },
    { include = "hydrogen_ruthenium_100", from = "src/hydrogen_ruthenium_100" },
    { include = "sodium_copper_111", from = "src/sodium_copper_111" },
]

[tool.poetry.scripts]
main = '_main.main:main'

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
scipy = "^1.11.0"
hamiltonian_generator = { path = "src/hamiltonian_generator/", develop = true }
surface_potential_analysis = { path = "src/surface_potential_analysis/", develop = true }

[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "*"

[tool.mypy]
strict = true
follow_imports = "error"
# enable_incomplete_feature = "Unpack"
# enable_incomplete_feature = "TypeVarTuple"

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qutip.*"
ignore_missing_imports = true

[tool.pyright]
reportUnknownMemberType = "information"
reportMissingTypeStubs = "information"
include = ["src"]

[tool.ruff]
unsafe-fixes = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "COM812",
    "E501",
    "ANN101",
    "S101",
    "D100",
    "D101",
    "D103",
    "D104",
    "D105",
    "CPY001",
]
exclude = ["typings/**/*", "lib/**/*"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pylint]
allow-dunder-method-names = [
    "__as_fundamental__",
    "__from_fundamental__",
    "__into_fundamental__",
    "__as_transformed__",
    "__into_transformed__",
    "__from_transformed__",
    "__convert_vector_into__",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
