[package]
name = "hamiltonian_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hamiltonian_generator"
crate-type = ["cdylib"]

[dependencies]
num-complex = "0.4.2"
pyo3 = { version = "0.20.2", features = ["extension-module", "num-complex"] }
