[tool.poetry]
name = "hydrogen_copper_111"
version = "0.0.1"
description = ""
authors = ["Matthew Ord <mo433@cam.ac.uk>"]
readme = "README.md"
packages = [{ include = "hydrogen_copper_111" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
scipy = "^1.12.0"
surface_potential_analysis = { path = "../surface_potential_analysis/", develop = true }

[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
