[tool.poetry]
name = "nickel_111"
version = "0.0.1"
description = ""
authors = ["Matthew Ord <mo433@cam.ac.uk>"]
readme = "README.md"
packages = [{include = "nickel_111"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.1"
matplotlib = "^3.6.3"
scipy = "^1.10.0"
surface_potential_analysis = { path = "../surface_potential_analysis/", develop = true }

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^0.991"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
