[tool.poetry]
name = "surface_dynamics_simulation"
version = "0.0.1"
description = ""
authors = ["Matthew Ord <mo433@cam.ac.uk>"]
readme = "README.md"
packages = [{ include = "surface_dynamics_simulation" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
scipy = "^1.10.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
ruff = "*"

[tool.mypy]
strict = true
follow_imports = "error"


[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[tool.ruff]
select = ["ALL"]
ignore = ["COM812", "E501", "ANN101", "S101", "PT009", "D100", "D105"]
target-version = "py311"

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
