[tool.poetry]
name = "surface_potential_analysis"
version = "0.0.1"
description = ""
authors = ["Matthew Ord <mo433@cam.ac.uk>"]
readme = "README.md"
packages = [{ include = "surface_potential_analysis" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
scipy = "^1.12.0"
hamiltonian_generator = { path = "../hamiltonian_generator/", develop = true }
qutip = "^4.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "*"
ruff = "*"

[tool.mypy]
strict = true
follow_imports = "error"

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qutip.*"
ignore_missing_imports = true

[tool.ruff]
select = ["ALL"]
ignore = ["COM812", "E501", "ANN101", "S101", "PT009", "D100", "D105"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
